            Added flag to differ between uppercase and lowercase letters
            Remove newline to make Flake8 linter happy
            Capitalize word
            Omit positional argument specifier
            Add "u" option to -f flag
            Update .gitignore
            Fix typos and style
            Write conditional statement more compactly
            Remove redundant positional argument specifier
            Add "u" flag to example and fix formatting
            Define a function to make parser for importing by test module
            Add unit tests
            Add information about running unit tests
            Fixed issue #9
    - 05.07.2016 <--> 0.0.7
            Set buffer to True
            Add more information about running unit tests
            Add spacing
            Fix formatting
            Add unit test for valid blacklist
            Rearrange imports
            Refactor code using collections.Counter
            Add more unit tests
            Move code for preventing infinite loop from make_password to sanitize…
            Ensure length of character set string is valid
            Add unit tests
    - 06.07.2016 <--> 0.0.8 (WIP)
            Added version string to be used.
            Cleaned output.
            Added header for test_passgen.py
            Added secondary author to passgen.py
            Added docstring for test_passgen.py
            Removed unused 'import argparse' in test_passgen.py
            Added author email address
            First draft check_password (issue #15)
            Added output for already drafted cases (issue #15)
            Added search for character sequence (issue #15)
            Created tool-script for generating abc.wl (issue #15)
            Created abc.wl file (issue #15)
            Implemented 'abc' list test (issue #15)
            Added english word-list (issue #15)
            Added word-list test (issue #15)
            Corrected typo in min length test (issue #15)